; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_verify_servername.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_verify_servername.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sn_expect = common dso_local global i32 0, align 4
@s_ctx = common dso_local global i32* null, align 8
@s_ctx2 = common dso_local global i32* null, align 8
@bio_stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Servername: expected context %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"Servername: context is 2\0A\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"Servername: context is 1\0A\00", align 1
@.str.3 = private unnamed_addr constant [32 x i8] c"Servername: context is unknown\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @verify_servername to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_servername(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32* @SSL_get_SSL_CTX(i32* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32, i32* @sn_expect, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %50

12:                                               ; preds = %2
  %13 = load i32, i32* @sn_expect, align 4
  %14 = icmp eq i32 %13, 1
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** @s_ctx, align 8
  %18 = icmp eq i32* %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %50

20:                                               ; preds = %15, %12
  %21 = load i32, i32* @sn_expect, align 4
  %22 = icmp eq i32 %21, 2
  br i1 %22, label %23, label %28

23:                                               ; preds = %20
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** @s_ctx2, align 8
  %26 = icmp eq i32* %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %50

28:                                               ; preds = %23, %20
  %29 = load i32, i32* @bio_stdout, align 4
  %30 = load i32, i32* @sn_expect, align 4
  %31 = call i32 (i32, i8*, ...) @BIO_printf(i32 %29, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** @s_ctx2, align 8
  %34 = icmp eq i32* %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %28
  %36 = load i32, i32* @bio_stdout, align 4
  %37 = call i32 (i32, i8*, ...) @BIO_printf(i32 %36, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %49

38:                                               ; preds = %28
  %39 = load i32*, i32** %6, align 8
  %40 = load i32*, i32** @s_ctx, align 8
  %41 = icmp eq i32* %39, %40
  br i1 %41, label %42, label %45

42:                                               ; preds = %38
  %43 = load i32, i32* @bio_stdout, align 4
  %44 = call i32 (i32, i8*, ...) @BIO_printf(i32 %43, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  br label %48

45:                                               ; preds = %38
  %46 = load i32, i32* @bio_stdout, align 4
  %47 = call i32 (i32, i8*, ...) @BIO_printf(i32 %46, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0))
  br label %48

48:                                               ; preds = %45, %42
  br label %49

49:                                               ; preds = %48, %35
  store i32 -1, i32* %3, align 4
  br label %50

50:                                               ; preds = %49, %27, %19, %11
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32* @SSL_get_SSL_CTX(i32*) #1

declare dso_local i32 @BIO_printf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
